--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "prettier": "^2.2.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "tailwindcss": "^0.6.1",
     "typescript": "~3.9.3",
+    "vue-cli-plugin-tailwindcss": "~0.1.1",
     "vue-jest": "^5.0.0-0"
   }
 }
